revenue-attribution/main/default/objects/SBQQ__Quote__c/fields/Churn_Total__c.field-meta.xml
<CustomField>
    <fullName>Churn_Total__c</fullName>
    <label>Churn Total</label>
    <summarizedField>SBQQ__QuoteLine__c.Churn_Total__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>