revenue-attribution/main/default/objects/SBQQ__Quote__c/fields/Expansion_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expansion_ARR__c</fullName>
    <label>Expansion ARR</label>
    <summarizedField>SBQQ__QuoteLine__c.Expansion_ARR__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>