revenue-attribution/main/default/objects/SBQQ__Quote__c/fields/Expansion_Total__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Total__c</fullName>
    <label>Expansion Total</label>
    <summarizedField>SBQQ__QuoteLine__c.Expansion_Total__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>