revenue-attribution/main/default/objects/SBQQ__Quote__c/fields/Net_New_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Total__c</fullName>
    <label>Net New Total</label>
    <summarizedField>SBQQ__QuoteLine__c.Net_New_Total__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>