revenue-attribution/main/default/objects/SBQQ__Quote__c/fields/New_New_ARR__c.field-meta.xml
<CustomField>
    <fullName>New_New_ARR__c</fullName>
    <label>New New ARR</label>
    <summarizedField>SBQQ__QuoteLine__c.Net_New_ARR__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>